# cpp-minecraft-server

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: hosted-pure-workflow.yml
src/: main.cpp
tests/: test.cpp
